src/test/ui/rust-2021/reserved-prefixes.stderr
error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:16:12
   |
LL |     demo3!(foo#bar);
   |            ^^^- help: consider inserting a whitespace before this `#`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:17:12
   |
LL |     demo2!(foo"bar");
   |            ^^^- help: consider inserting a whitespace before this `"`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:18:12
   |
LL |     demo2!(foo'b');
   |            ^^^- help: consider inserting a whitespace before this `'`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:20:12
   |
LL |     demo2!(foo'b);
   |            ^^^- help: consider inserting a whitespace before this `'`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:21:12
   |
LL |     demo3!(foo# bar);
   |            ^^^- help: consider inserting a whitespace before this `#`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:22:12
   |
LL |     demo4!(foo#! bar);
   |            ^^^- help: consider inserting a whitespace before this `#`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:23:12
   |
LL |     demo4!(foo## bar);
   |            ^^^- help: consider inserting a whitespace before this `#`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `foo` is unknown
  --> $DIR/reserved-prefixes.rs:25:12
   |
LL |     demo4!(foo#bar#);
   |            ^^^- help: consider inserting a whitespace before this `#`
   |            |
   |            unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: prefix `bar` is unknown
  --> $DIR/reserved-prefixes.rs:25:16
   |
LL |     demo4!(foo#bar#);
   |                ^^^- help: consider inserting a whitespace before this `#`
   |                |
   |                unknown prefix
   |
   = note: prefixed identifiers and string literals are reserved since Rust 2021

error: aborting due to 9 previous errors

